plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '4.0.2'
}

repositories {
    mavenCentral()
}

javafx {
    version = "25"
    modules = [ 'javafx.controls' ]
}

application {
    mainClass = 'net.jockx.kulki.MainApp'
    mainModule = 'net.jockx.kulki'
}

group = 'net.jockx'
version = '1.0.3'

description = """Kulki"""

dependencies {
    implementation 'org.openjfx:javafx-controls:25'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.slf4j:slf4j-simple:2.0.18'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.14.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.4'
}

test {
    useJUnitPlatform()
}

compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = '25'
    targetCompatibility = '25'
}

jlink {
    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
    addExtraDependencies('org.slf4j')
    launcher {
        name = 'Kulki'
    }

    jpackage {
        skipInstaller = true
        icon = 'flatpak/Kulki.png'
        imageOptions.addAll('--app-content', 'flatpak/Kulki.desktop', '--app-content', 'flatpak/Kulki.metainfo.xml')
    }
}

tasks.register('packageTarGz', Tar) {
    group = 'Distribution'
    description = 'Creates a tar.gz archive of the jpackage image for Flatpak builds.'
    dependsOn 'jpackageImage'

    from layout.buildDirectory.dir('jpackage/Kulki')
    into 'Kulki'

    archiveBaseName = 'Kulki'
    archiveVersion = project.version
    archiveExtension = 'tar.gz'
    compression = Compression.GZIP

    destinationDirectory = layout.buildDirectory.dir('distributions')
}

def flatpakDir = layout.buildDirectory.dir('flatpak')

tasks.register('cleanFlatpakDir', Delete) {
    delete flatpakDir
}

tasks.register('copyDistToFlatpak', Copy) {
    dependsOn cleanFlatpakDir, packageTarGz
    from(layout.buildDirectory.dir('distributions')) {
        include "Kulki-${project.version}.tar.gz"
        rename "Kulki-${project.version}.tar.gz", "kulki.tar.gz"
    }
    into(flatpakDir)
}

tasks.register('copyManifestToFlatpak', Copy) {
    dependsOn cleanFlatpakDir
    from('flatpak/') { include 'net.jockx.Kulki.yml' }
    into(flatpakDir)
}

tasks.register('flatpakRemoteAdd', Exec) {
    dependsOn copyDistToFlatpak, copyManifestToFlatpak
    workingDir = flatpakDir.get().asFile
    commandLine 'flatpak', 'remote-add', '--if-not-exists', '--user', 'flathub',
            'https://dl.flathub.org/repo/flathub.flatpakrepo'
}

tasks.register('flatpakEnsureBuilder', Exec) {
    dependsOn flatpakRemoteAdd
    workingDir = flatpakDir.get().asFile
    commandLine 'flatpak', 'install', '--user', 'org.flatpak.Builder'
}

tasks.register('flatpakBuilderRun', Exec) {
    dependsOn flatpakEnsureBuilder
    workingDir = flatpakDir.get().asFile
    commandLine 'flatpak', 'run', 'org.flatpak.Builder', '--force-clean', '--user',
            '--install-deps-from=flathub', '--state-dir=.flatpak-builder',
            '--repo=repo', '--install', 'builddir', 'net.jockx.Kulki.yml'
}

tasks.register('buildFlatpak') {
    group = 'Build'
    description = 'Builds and installs a Flatpak package from the jpackage image.'
    dependsOn flatpakBuilderRun
}
